# stripe-ish

./: .gitignore  main.py  pyproject.toml
playwright/: first_test.py  google_test.py
src/: config.py  database.py
src/payments/: models.py  services.py  stripe_client.py
tests/playwright/: test_first.py
