[project]
name = "stripe-ish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "pytest-playwright>=0.7.2",
    "sqlalchemy>=2.0.49",
    "stripe>=15.0.1",
]
